# excel-loader

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.serena/: project.yml
dags/: excel_loader_dag.py
dags/manual_excel_loader/: __init__.py  _connections.py  db_loader.py  db_schema.py  ddl.py  ddl_generator.py  enums.py  exceptions.py  inferencer.py  loader.py  models.py  table_manager.py  template.py  validation_report.py  validator.py
dags/manual_excel_loader/readers/: __init__.py  csv_reader.py  excel_reader.py
dags/manual_excel_loader/writers/: __init__.py  base.py  csv_file.py  database.py  sql_file.py
dags/samples/: mub_detalno_0303.xlsx  mub_detalno_0303_100326_192058.sql  org_struktura_0303.xlsx  org_struktura_0303_100326_194731.sql  tceli_po_orb_0303.xlsx  tceli_po_orb_0303_100326_193905.sql
infra/: compose.yaml
intro/: _make_pdfs.py  requirements.txt  start_script.py
samples/: ddl.sql  invalid_types.xlsx  large_errors.xlsx  multisheet.xlsx  skip_rows_example.xlsx  valid_sales.xlsx
src/manual_excel_loader/: enums.py  exceptions.py  loader.py  models.py  reader.py  result.py  validator.py
src/manual_excel_loader/readers/: sql_reader.py
src/manual_excel_loader/writers/: base.py  database.py
tests/: test_csv_reader.py  test_dag.py  test_database_writers.py  test_db_loader.py  test_db_schema.py  test_ddl.py  test_ddl_generator.py  test_inferencer.py  test_loader.py  test_reader.py  test_sql_reader.py  test_table_manager.py  test_template.py  test_validation_report.py  test_validator.py  test_writers.py
