[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "manual-excel-loader"
version = "0.1.0"
description = "Excel → SQL/CSV loader with data validation for GreenPlum and ClickHouse"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]